--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/travelprog
+spring.datasource.username=postgres
+spring.datasource.password=akira211212
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
